--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,8 @@
 .Piedepagina{
-    background-color: #154360;
-    margin-top: 90px;
+    background-color: #198b65;
+    margin-top: 60px;
 }
 
 .Piedepagina p{
-    padding: 90px;
+    padding: 60px;
 }
